# colorsign

./: README.md  final_testing_results.md
esp32s3-sign/sign/: README.md
esp32s3-sign/sign/main/: CMakeLists.txt
esp32s3-sign/sign/src/core/: color_integration.cpp  color_kem.cpp  parameters.cpp  performance_metrics_macos.cpp  security_utils.cpp  shake_sampler.cpp  sign.cpp  utils.cpp  verify.cpp
esp32s3-sign/sign/src/include/clwe/: color_value.hpp  keygen.hpp  parameters.hpp  security_utils.hpp  shake_sampler.hpp  sign.hpp  utils.hpp
esp32s3-sign/sign/tests/: CMakeLists.txt  nist_kat_parser.cpp  nist_kat_parser.hpp  test_known_answer_tests.cpp
linux/sign/src/core/: color_integration.cpp  keygen.cpp  utils.cpp
linux/sign/src/include/clwe/: color_integration.hpp  keygen.hpp  utils.hpp
linux/sign/tests/: test_compression.cpp
macos/sign/src/core/: color_integration.cpp  keygen.cpp  utils.cpp
macos/sign/src/include/clwe/: color_integration.hpp  keygen.hpp  utils.hpp
macos/sign/tests/: CMakeLists.txt  test_compression.cpp  test_final_validation.cpp  test_kat.cpp  test_keygen.cpp  test_sign.cpp
windows/: README.md
windows/sign/: CMakeLists.txt  build_windows.bat  generate_key_images.cpp  run_all_tests.bat  test_key_images.cpp
windows/sign/src/: main.cpp
windows/sign/src/core/: color_integration.cpp  kat_complete.cpp  key_lifecycle.cpp  keygen.cpp  ntt_simd_benchmark.cpp  parameters.cpp  security_utils.cpp  sign.cpp  utils.cpp  verify.cpp
windows/sign/src/include/clwe/: keygen.hpp  parameters.hpp  sign.hpp  utils.hpp  verify.hpp
windows/sign/tests/: CMakeLists.txt  test_color_integration.cpp  test_compression.cpp  test_final_validation.cpp  test_kat.cpp  test_keygen.cpp  test_sign.cpp  test_stress.cpp  test_utils.cpp  test_verify.cpp
